objects/SchoolSeminarEntry__c.object
<CustomObject>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>削除有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EntryDateFormula__c</fullName>
        <formula>DATEVALUE(EntryDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申込年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntryDate__c</fullName>
        <label>申込年月日(旧)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EntryDivision__c</fullName>
        <label>申込区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JukoshaAddress__c</fullName>
        <label>受講者住所</label>
        <length>360</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JukoshaCustomerCode2Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>受講顧客コード２</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>講習会・セミナー申込情報</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JukoshaCustomerCode2__c</fullName>
        <label>受講顧客コード２</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JukoshaCustomerCode__c</fullName>
        <label>受講顧客コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JukoshaCustomerName__c</fullName>
        <label>受講顧客名称</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JukoshaCustomerPlace__c</fullName>
        <label>受講者事業所</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JukoshaDepartment__c</fullName>
        <label>受講者部課名</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JukoshaEmail__c</fullName>
        <label>受講者Ｅメール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JukoshaExtension__c</fullName>
        <label>受講者内線</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JukoshaName__c</fullName>
        <label>受講者名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JukoshaPhone__c</fullName>
        <label>受講者電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>JukoshaPost__c</fullName>
        <label>受講者役職</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdateDateFormula__c</fullName>
        <formula>Datevalue(LastUpdateDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最終更新日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastUpdateDate__c</fullName>
        <label>最終更新日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lecture__c</fullName>
        <label>担当講師</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>連携キー</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegistrationDateFormula__c</fullName>
        <formula>Datevalue(RegistrationDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>登録日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegistrationDate__c</fullName>
        <label>登録日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>備考</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SalespersonName__c</fullName>
        <label>日本電子営業担当：担当者名</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SankaJokyoKakutei1__c</fullName>
        <label>参加確定</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolSeminar__c</fullName>
        <label>講習会・セミナー情報</label>
        <referenceTo>SchoolSeminar__c</referenceTo>
        <relationshipLabel>講習会・セミナー申込情報</relationshipLabel>
        <relationshipName>SchoolSeminarEntry</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SeriesPI__c</fullName>
        <label>系列</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>講習会・セミナー申込情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SchoolSeminar__c</columns>
        <columns>JukoshaCustomerName__c</columns>
        <columns>JukoshaCustomerPlace__c</columns>
        <columns>JukoshaName__c</columns>
        <columns>EntryDate__c</columns>
        <columns>JukoshaDepartment__c</columns>
        <columns>JukoshaCustomerCode__c</columns>
        <columns>JukoshaCustomerCode2Link__c</columns>
        <columns>JukoshaCustomerCode2__c</columns>
        <columns>JukoshaAddress__c</columns>
        <columns>JukoshaPhone__c</columns>
        <columns>JukoshaPost__c</columns>
        <columns>JukoshaEmail__c</columns>
        <columns>Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SchoolSeminar__c</field>
            <operation>contains</operation>
            <value>SEM</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2017 12:00 AM</value>
        </filters>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>予約番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>